--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,6 +29,7 @@ a {
   max-width: 80%;
   margin: 3rem auto;
   text-align: center;
+  padding-bottom: 7rem;
 }
 
 .app {
@@ -46,7 +47,9 @@ form {
   flex-direction: column;
   gap: 1rem;
   align-items: center;
-  margin-bottom: 1rem;
+}
+.form__button {
+  padding-bottom: 10rem;
 }
 
 .fade {
